--- a/examples/nextra/mistral/src/app/api/endpoint/batch/page.mdx
+++ b/examples/nextra/mistral/src/app/api/endpoint/batch/page.mdx
@@ -5,7 +5,6 @@ sidebarTitle: Batch
 import "@speakeasy-api/docs-md-react/nextra.css";
 
 import {
-  CodeSample,
   ExpandableBreakout,
   ExpandableBreakoutProperties,
   ExpandableBreakoutTitle,
@@ -94,53 +93,19 @@ TypeScript
   defaultValue={`import { Mistral } from "@mistralai/mistralai";
 
 const mistral = new Mistral({
-  apiKey: "<YOUR_BEARER_TOKEN_HERE>",
+  apiKey: process.env["MISTRAL_API_KEY"] ?? "",
 });
 
 async function run() {
-  const result = await mistral.batch.jobsApiRoutesBatchGetBatchJobs({});
+  const result = await mistral.batch.jobs.list({});
 
-  // Handle the result
   console.log(result);
 }
 
-run();`}
+run();
+`}
   packageManagerUrl="/pkg"
 />
-
-</SectionContent>
-
-<SectionTab
-  slot="tab"
-  id="operation-jobs_api_routes_batch_get_batch_jobs_code-samples_python"
->
-
-Python
-
-</SectionTab>
-
-<SectionContent
-  slot="content"
-  id="operation-jobs_api_routes_batch_get_batch_jobs_code-samples_python"
->
-
-<CodeSample>
-
-```python
-from mistralai import Mistral
-
-
-with Mistral(
-    api_key="<YOUR_BEARER_TOKEN_HERE>",
-) as mistral:
-
-    res = mistral.batch.jobs_api_routes_batch_get_batch_jobs()
-
-    # Handle response
-    print(res)
-```
-
-</CodeSample>
 
 </SectionContent>
 
@@ -735,60 +700,24 @@ TypeScript
   defaultValue={`import { Mistral } from "@mistralai/mistralai";
 
 const mistral = new Mistral({
-  apiKey: "<YOUR_BEARER_TOKEN_HERE>",
+  apiKey: process.env["MISTRAL_API_KEY"] ?? "",
 });
 
 async function run() {
-  const result = await mistral.batch.jobsApiRoutesBatchCreateBatchJob({
+  const result = await mistral.batch.jobs.create({
     inputFiles: [
       "fe3343a2-3b8d-404b-ba32-a78dede2614a",
     ],
-    endpoint: "/v1/moderations",
+    endpoint: "/v1/classifications",
   });
 
-  // Handle the result
   console.log(result);
 }
 
-run();`}
+run();
+`}
   packageManagerUrl="/pkg"
 />
-
-</SectionContent>
-
-<SectionTab
-  slot="tab"
-  id="operation-jobs_api_routes_batch_create_batch_job_code-samples_python"
->
-
-Python
-
-</SectionTab>
-
-<SectionContent
-  slot="content"
-  id="operation-jobs_api_routes_batch_create_batch_job_code-samples_python"
->
-
-<CodeSample>
-
-```python
-from mistralai import Mistral, models
-
-
-with Mistral(
-    api_key="<YOUR_BEARER_TOKEN_HERE>",
-) as mistral:
-
-    res = mistral.batch.jobs_api_routes_batch_create_batch_job(input_files=[
-        "fe3343a2-3b8d-404b-ba32-a78dede2614a",
-    ], endpoint=models.APIEndpoint.ROOT_V1_MODERATIONS)
-
-    # Handle response
-    print(res)
-```
-
-</CodeSample>
 
 </SectionContent>
 
@@ -1416,55 +1345,21 @@ TypeScript
   defaultValue={`import { Mistral } from "@mistralai/mistralai";
 
 const mistral = new Mistral({
-  apiKey: "<YOUR_BEARER_TOKEN_HERE>",
+  apiKey: process.env["MISTRAL_API_KEY"] ?? "",
 });
 
 async function run() {
-  const result = await mistral.batch.jobsApiRoutesBatchGetBatchJob({
+  const result = await mistral.batch.jobs.get({
     jobId: "4017dc9f-b629-42f4-9700-8c681b9e7f0f",
   });
 
-  // Handle the result
   console.log(result);
 }
 
-run();`}
+run();
+`}
   packageManagerUrl="/pkg"
 />
-
-</SectionContent>
-
-<SectionTab
-  slot="tab"
-  id="operation-jobs_api_routes_batch_get_batch_job_code-samples_python"
->
-
-Python
-
-</SectionTab>
-
-<SectionContent
-  slot="content"
-  id="operation-jobs_api_routes_batch_get_batch_job_code-samples_python"
->
-
-<CodeSample>
-
-```python
-from mistralai import Mistral
-
-
-with Mistral(
-    api_key="<YOUR_BEARER_TOKEN_HERE>",
-) as mistral:
-
-    res = mistral.batch.jobs_api_routes_batch_get_batch_job(job_id="4017dc9f-b629-42f4-9700-8c681b9e7f0f")
-
-    # Handle response
-    print(res)
-```
-
-</CodeSample>
 
 </SectionContent>
 
@@ -1996,55 +1891,21 @@ TypeScript
   defaultValue={`import { Mistral } from "@mistralai/mistralai";
 
 const mistral = new Mistral({
-  apiKey: "<YOUR_BEARER_TOKEN_HERE>",
+  apiKey: process.env["MISTRAL_API_KEY"] ?? "",
 });
 
 async function run() {
-  const result = await mistral.batch.jobsApiRoutesBatchCancelBatchJob({
+  const result = await mistral.batch.jobs.cancel({
     jobId: "4fb29d1c-535b-4f0a-a1cb-2167f86da569",
   });
 
-  // Handle the result
   console.log(result);
 }
 
-run();`}
+run();
+`}
   packageManagerUrl="/pkg"
 />
-
-</SectionContent>
-
-<SectionTab
-  slot="tab"
-  id="operation-jobs_api_routes_batch_cancel_batch_job_code-samples_python"
->
-
-Python
-
-</SectionTab>
-
-<SectionContent
-  slot="content"
-  id="operation-jobs_api_routes_batch_cancel_batch_job_code-samples_python"
->
-
-<CodeSample>
-
-```python
-from mistralai import Mistral
-
-
-with Mistral(
-    api_key="<YOUR_BEARER_TOKEN_HERE>",
-) as mistral:
-
-    res = mistral.batch.jobs_api_routes_batch_cancel_batch_job(job_id="4fb29d1c-535b-4f0a-a1cb-2167f86da569")
-
-    # Handle response
-    print(res)
-```
-
-</CodeSample>
 
 </SectionContent>
 
