--- a/examples/docusaurus/mistral/docs/api/endpoint/audio/transcriptions.mdx
+++ b/examples/docusaurus/mistral/docs/api/endpoint/audio/transcriptions.mdx
@@ -6,7 +6,6 @@ sidebar_label: Audio Transcriptions
 import "@speakeasy-api/docs-md-react/docusaurus.css";
 
 import {
-  CodeSample,
   DebugPlaceholder,
   ExpandableBreakout,
   ExpandableBreakoutDefaultValue,
@@ -115,51 +114,21 @@ TypeScript
   defaultValue={`import { Mistral } from "@mistralai/mistralai";
 
 const mistral = new Mistral({
-  apiKey: "<YOUR_BEARER_TOKEN_HERE>",
+  apiKey: process.env["MISTRAL_API_KEY"] ?? "",
 });
 
 async function run() {
-  const result = await mistral.audio.transcriptions.audioApiV1TranscriptionsPost({
+  const result = await mistral.audio.transcriptions.complete({
     model: "Model X",
   });
 
-  // Handle the result
   console.log(result);
 }
 
-run();`}
+run();
+`}
+  packageManagerUrl="/pkg"
 />
-
-</SectionContent>
-
-<SectionTab slot="tab" id="operation-audio_api_v1_transcriptions_post+code-samples+python">
-
-Python
-
-</SectionTab>
-
-<SectionContent
-  slot="content"
-  id="operation-audio_api_v1_transcriptions_post+code-samples+python"
->
-
-<CodeSample>
-
-```python
-from mistralai import Mistral
-
-
-with Mistral(
-    api_key="<YOUR_BEARER_TOKEN_HERE>",
-) as mistral:
-
-    res = mistral.audio.transcriptions.audio_api_v1_transcriptions_post(model="Model X")
-
-    # Handle response
-    print(res)
-```
-
-</CodeSample>
 
 </SectionContent>
 
@@ -2077,11 +2046,11 @@ TypeScript
   defaultValue={`import { Mistral } from "@mistralai/mistralai";
 
 const mistral = new Mistral({
-  apiKey: "<YOUR_BEARER_TOKEN_HERE>",
+  apiKey: process.env["MISTRAL_API_KEY"] ?? "",
 });
 
 async function run() {
-  const result = await mistral.audio.transcriptions.audioApiV1TranscriptionsPostStream({
+  const result = await mistral.audio.transcriptions.stream({
     model: "Camry",
   });
 
@@ -2091,44 +2060,10 @@ async function run() {
   }
 }
 
-run();`}
+run();
+`}
+  packageManagerUrl="/pkg"
 />
-
-</SectionContent>
-
-<SectionTab
-  slot="tab"
-  id="operation-audio_api_v1_transcriptions_post_stream+code-samples+python"
->
-
-Python
-
-</SectionTab>
-
-<SectionContent
-  slot="content"
-  id="operation-audio_api_v1_transcriptions_post_stream+code-samples+python"
->
-
-<CodeSample>
-
-```python
-from mistralai import Mistral
-
-
-with Mistral(
-    api_key="<YOUR_BEARER_TOKEN_HERE>",
-) as mistral:
-
-    res = mistral.audio.transcriptions.audio_api_v1_transcriptions_post_stream(model="Camry")
-
-    with res as event_stream:
-        for event in event_stream:
-            # handle event
-            print(event, flush=True)
-```
-
-</CodeSample>
 
 </SectionContent>
 
