--- a/examples/docusaurus/mistral/docs/api/endpoint/chat.mdx
+++ b/examples/docusaurus/mistral/docs/api/endpoint/chat.mdx
@@ -6,7 +6,6 @@ sidebar_label: Chat
 import "@speakeasy-api/docs-md-react/docusaurus.css";
 
 import {
-  CodeSample,
   DebugPlaceholder,
   ExpandableBreakout,
   ExpandableBreakoutDefaultValue,
@@ -115,11 +114,11 @@ TypeScript
   defaultValue={`import { Mistral } from "@mistralai/mistralai";
 
 const mistral = new Mistral({
-  apiKey: "<YOUR_BEARER_TOKEN_HERE>",
+  apiKey: process.env["MISTRAL_API_KEY"] ?? "",
 });
 
 async function run() {
-  const result = await mistral.chat.chatCompletionV1ChatCompletionsPost({
+  const result = await mistral.chat.complete({
     model: "mistral-small-latest",
     messages: [
       {
@@ -129,55 +128,13 @@ async function run() {
     ],
   });
 
-  for await (const event of result) {
-    // Handle the event
-    console.log(event);
-  }
+  console.log(result);
 }
 
-run();`}
+run();
+`}
+  packageManagerUrl="/pkg"
 />
-
-</SectionContent>
-
-<SectionTab
-  slot="tab"
-  id="operation-chat_completion_v1_chat_completions_post+code-samples+python"
->
-
-Python
-
-</SectionTab>
-
-<SectionContent
-  slot="content"
-  id="operation-chat_completion_v1_chat_completions_post+code-samples+python"
->
-
-<CodeSample>
-
-```python
-from mistralai import Mistral, models
-
-
-with Mistral(
-    api_key="<YOUR_BEARER_TOKEN_HERE>",
-) as mistral:
-
-    res = mistral.chat.chat_completion_v1_chat_completions_post(model="mistral-small-latest", messages=[
-        {
-            "content": "Who is the best French painter? Answer in one short sentence.",
-            "role": models.UserMessageRole.USER,
-        },
-    ])
-
-    with res as event_stream:
-        for event in event_stream:
-            # handle event
-            print(event, flush=True)
-```
-
-</CodeSample>
 
 </SectionContent>
 
