--- a/examples/nextra/mistral/src/app/api/endpoint/agents/page.mdx
+++ b/examples/nextra/mistral/src/app/api/endpoint/agents/page.mdx
@@ -5,7 +5,6 @@ sidebarTitle: Agents
 import "@speakeasy-api/docs-md-react/nextra.css";
 
 import {
-  CodeSample,
   ExpandableBreakout,
   ExpandableBreakoutDescription,
   ExpandableBreakoutProperties,
@@ -89,11 +88,11 @@ TypeScript
   defaultValue={`import { Mistral } from "@mistralai/mistralai";
 
 const mistral = new Mistral({
-  apiKey: "<YOUR_BEARER_TOKEN_HERE>",
+  apiKey: process.env["MISTRAL_API_KEY"] ?? "",
 });
 
 async function run() {
-  const result = await mistral.agents.agentsCompletionV1AgentsCompletionsPost({
+  const result = await mistral.agents.complete({
     messages: [
       {
         content: "Who is the best French painter? Answer in one short sentence.",
@@ -103,52 +102,13 @@ async function run() {
     agentId: "<id>",
   });
 
-  // Handle the result
   console.log(result);
 }
 
-run();`}
+run();
+`}
   packageManagerUrl="/pkg"
 />
-
-</SectionContent>
-
-<SectionTab
-  slot="tab"
-  id="operation-agents_completion_v1_agents_completions_post_code-samples_python"
->
-
-Python
-
-</SectionTab>
-
-<SectionContent
-  slot="content"
-  id="operation-agents_completion_v1_agents_completions_post_code-samples_python"
->
-
-<CodeSample>
-
-```python
-from mistralai import Mistral, models
-
-
-with Mistral(
-    api_key="<YOUR_BEARER_TOKEN_HERE>",
-) as mistral:
-
-    res = mistral.agents.agents_completion_v1_agents_completions_post(messages=[
-        {
-            "content": "Who is the best French painter? Answer in one short sentence.",
-            "role": models.UserMessageRole.USER,
-        },
-    ], agent_id="<id>")
-
-    # Handle response
-    print(res)
-```
-
-</CodeSample>
 
 </SectionContent>
 
